--- a/workspace/assets/css/themes/dark/dark.css
+++ b/workspace/assets/css/themes/dark/dark.css
@@ -321,7 +321,7 @@ textarea {
 }
 ul#pagination {
 	background-color: #111;
-	margin: 12px 0!important;
+	margin: 12px 0 0 0!important;
 }
 
 
